k8s/kibana/kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-np
spec:
  selector: 
    app: kibana
  type: NodePort  
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 5601 
        #      nodePort: 30000
