k8s/kibana/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: kibana
  name: kibana
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: kibana-np
    weight: 100
